--- a/nginx.conf
+++ b/nginx.conf
@@ -26,6 +26,6 @@ http {
     # }
     
     # grab all the site servers
-    include D:/src/nginx/conf/sites/*.conf;
+    include conf/sites/*.conf;
 
 }
