--- a/sites/cheatsheets.natelevison.com.conf
+++ b/sites/cheatsheets.natelevison.com.conf
@@ -2,9 +2,9 @@
 server {
     listen 80;
     server_name cheatsheets.natelevison.com;
-    error_log   D:/src/nginx/logs/cheatsheets.natelevison.com.error.log;
+    error_log   logs/cheatsheets.natelevison.com.error.log;
 
-    root        D:/code/web/cheatsheets/;
+    root        C:/code/cheatsheets.natelevison.com/;
     location / {
         index   index.html;
         proxy_http_version  1.1;
