--- a/sites/cloud.natelevison.com.conf
+++ b/sites/cloud.natelevison.com.conf
@@ -2,7 +2,7 @@
 server {
     listen 80;
     server_name cloud.natelevison.com;
-    error_log   D:/src/nginx/logs/cloud.natelevison.com.error.log;
+    error_log   logs/cloud.natelevison.com.error.log;
 
     location / {
         add_header 'Cross-Origin-Opener-Policy' 'same-origin-allow-popups' always;
