--- a/sites/hooks.natelevison.com.conf
+++ b/sites/hooks.natelevison.com.conf
@@ -2,7 +2,7 @@
 server {
     listen 80;
     server_name hooks.natelevison.com;
-    error_log   D:/src/nginx/logs/hooks.natelevison.com.error.log;
+    error_log   logs/hooks.natelevison.com.error.log;
 
     location / {
         add_header 'Access-Control-Allow-Origin' 'same-origin' always;
