--- a/sites/journal.natelevison.com.conf
+++ b/sites/journal.natelevison.com.conf
@@ -2,7 +2,7 @@
 server {
     listen 80;
     server_name journal.natelevison.com;
-    error_log   D:/src/nginx/logs/journal.natelevison.com.error.log;
+    error_log   logs/journal.natelevison.com.error.log;
 
     location / {
         # pass forward the IP address
