--- a/sites/natelevison.com.conf
+++ b/sites/natelevison.com.conf
@@ -3,7 +3,7 @@ server {
     listen 80;
     listen 127.0.0.1:3690;
     server_name natelevison.com www.natelevison.com;
-    error_log   D:/src/nginx/logs/natelevison.com.error.log;
+    error_log   logs/natelevison.com.error.log;
 
     location / {
         add_header 'Access-Control-Allow-Origin' 'same-origin' always;
