--- a/sites/static.natelevison.com.conf
+++ b/sites/static.natelevison.com.conf
@@ -2,9 +2,9 @@
 server {
     listen 80;
     server_name static.natelevison.com;
-    error_log   D:/src/nginx/logs/static.natelevison.com.error.log;
+    error_log   logs/static.natelevison.com.error.log;
 
-    root        D:/website/static.natelevison.com/;
+    root        C:/code/static.natelevison.com/;
     location / {
         index   index.html;
         proxy_http_version  1.1;
