--- a/sites/socket_frontend.natelevison.com.conf
+++ b/sites/socket_frontend.natelevison.com.conf
@@ -2,7 +2,7 @@
 server {
     listen 80;
     server_name socket_frontend.natelevison.com;
-    error_log   D:/src/nginx/logs/socket_frontend.error.log;
+    error_log   logs/socket_frontend.error.log;
 
     location / {
 
