--- a/nginx.conf
+++ b/nginx.conf
@@ -1,9 +1,9 @@
-worker_processes 4;
+worker_processes 1;
 error_log logs/error.log;
 pid logs/nginx.pid;
 
 events {
-    worker_connections 1024;
+    worker_connections 128;
 }
 
 
@@ -14,18 +14,11 @@ http {
     include mime.types;
     default_type application/octet-stream;
 
-    sendfile on;
+    # sendfile on;
     keepalive_timeout 65;
-    gzip on;
-
-    # server {
-    #     listen 80 default_server;
-    #     server_name _;
-
-    #     return 307 https://natelevison.com;
-    # }
+    # gzip on;
     
     # grab all the site servers
-    include conf/sites/*.conf;
+    include C:/nginx/conf/sites/*.conf;
 
 }
